# StreamProcessor

./: CMakeLists.txt  build_config.sh
StreamProcessor/: CMakeLists.txt
StreamProcessor/include/: CallbackInterface.h  Receiver.h  ReceiverInterface.h
StreamProcessor/src/: Receiver.cpp
Test/: CMakeLists.txt  main.cpp
packet/: CMakeLists.txt
packet/include/: block_stream_reader.h  packet.h  packet_parser.h
packet/src/: block_stream_reader.cpp  packet_parser.cpp
